--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cadenaSQL": "Server=(local); DataBase=DBEmpleado; Trusted_Connection=true; TrustServerCertificate=true;"
+    "cadenaSQL": "Server=JOSS\\SQLEXPRESS; DataBase=DBE; Trusted_Connection=true; TrustServerCertificate=true;"
   }
 }
